--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,2 @@
-__pycache__/BART.cpython-38.pyc
-__pycache__/data_set.cpython-38.pyc
-__pycache__/hyperparameter.cpython-38.pyc
-__pycache__/hyperparams.cpython-38.pyc
-__pycache__/utils.cpython-38.pyc
+/__pycache__
+/1.0/__pycache__
